test_regress/t/t_force_initial.out
%Error: t/t_force_initial.v:23:  got='h2 exp='h00000000
%Error: t/t_force_initial.v:27:  got='h2 exp='h00000001
%Error: t/t_force_initial.v:35:  got='h2 exp='h00000003
